%%{init: {'theme':'default'}}%%
erDiagram
    USERS ||--o{ INTERACTIONS : has
    USERS ||--o{ USER_TOPICS : has
    USERS ||--o{ USER_TOPIC_STATS : has
    USERS ||--o| USER_BANDIT_STATES : has
    USERS ||--o| USER_SKILL_PROFILES : has
    USERS ||--o{ USER_MEMORIES : has

    EVENTS ||--o{ INTERACTIONS : referenced_by
    EVENTS ||--o{ EVENT_TOPICS : has
    TOPICS ||--o{ USER_TOPICS : in
    TOPICS ||--o{ EVENT_TOPICS : in
    TOPICS ||--o{ USER_TOPIC_STATS : tracked_by

    USERS {
        int id PK
        int telegram_id UK
        string username
        string preferred_format
        string city
        text topic_weights "JSON"
        text embedding "JSON-вектор"
    }

    EVENTS {
        int id PK
        string title
        text description
        string format
        string city
        string date
        text embedding "JSON-вектор"
        int quality_score
        int hype_score
        text tech_stack "JSON"
    }

    RAW_EVENTS {
        int id PK
        string title
        text raw_description
        string status "raw/normalized/non_it"
    }

    INTERACTIONS {
        int id PK
        int user_id FK
        int event_id FK
        string action "like/dislike/save"
        datetime created_at
    }

    TOPICS {
        int id PK
        string code UK
        string title
    }

    USER_TOPIC_STATS {
        int user_id FK
        int topic_id FK
        float alpha
        float beta
    }

    USER_BANDIT_STATES {
        int user_id FK
        int dim
        text a_json
        text b_json
    }

    USER_SKILL_PROFILES {
        int user_id FK
        string current_role
        string target_role
        text current_skills "JSON"
        text target_skills "JSON"
    }

    USER_MEMORIES {
        int id PK
        int user_id FK
        text text
        string category
        float salience
        text embedding "JSON"
    }
